# pade

./: .fallowrc.json  .gitattributes  .gitignore  .mcp.json  .oxlintrc.json  .stylelintrc.json  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/skills/rust-best-practices/: SKILL.md
docs/: handoff-agent-readability-refactor.md  handoff-apply-engineering-laws.md  handoff-autoname-temp-projects.md  handoff-contextmenu-powertoys-parity.md  handoff-diff-full-snippets.md  handoff-webview2-resize-blank.md  handoff-window-drag-lag.md  handoff-windows11-context-menu.md  requirements.md  terminal-rendering.md  ui-design-brief.md
eslint-rules/: expand-block.js  expand-nested-object-expression.js  expand-nested-type-literal.js  expand-svelte-block.js  no-padded-tag.js
patches/: @xterm__xterm@6.1.0-beta.288.patch
scripts/: smoke.mjs
src/: App.svelte  main.ts  theme.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/contextmenu-handler/: AppxManifest.xml  Cargo.toml
src-tauri/contextmenu-handler/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  clipboard.rs  config.rs  contextmenu.rs  copilot.rs  design.rs  discord.rs  gitignore.rs  ide.rs  lib.rs  main.rs  mcp.rs  members.rs  naming.rs  os.rs  pty.rs  recovery.rs  refs.rs  resume.rs  runner.rs  tasks.rs  theming.rs  usage.rs  util.rs  vcs.rs  watcher.rs  window.rs  workspace.rs
src-tauri/src/contextmenu/: modern.rs
src-tauri/src/vcs/: branches.rs  clone.rs  inspect.rs  log.rs  mod.rs  pull.rs  remote.rs  restore.rs  status.rs  worktree.rs
src-tauri/webview-recovery/: Cargo.toml
src-tauri/webview-recovery/src/: lib.rs
src/lib/: AppMenu.svelte  BrandMark.svelte  ChangeFeed.svelte  ColorText.svelte  CommitModal.svelte  ConfirmDialog.svelte  DesignMenu.svelte  DiffView.svelte  Icon.svelte  IdeMenu.svelte  Logo.svelte  RunnerDock.svelte  SessionBadge.svelte  SessionTabs.svelte  Terminal.svelte  UsageMeter.svelte  agent-icon.test.ts  agent-icon.ts  agentIcon.test.ts  agentIcon.ts  ansi.test.ts  ansi.ts  auto-name.test.ts  auto-name.ts  autoName.test.ts  autoName.ts  bridge.ts  change-groups.test.ts  change-groups.ts  choice-prompt.test.ts  choice-prompt.ts  colors.test.ts  colors.ts  context-level.test.ts  context-level.ts  contextLevel.test.ts  contextLevel.ts  diff.test.ts  diff.ts  discord-presence.ts  (+78 more)
src/lib/commitModal/: DiffPane.svelte  FileList.svelte
src/lib/stores/: apiErrorRetry.svelte.ts  apiErrorRetry.test.ts  context.svelte.ts  context.test.ts  editors.svelte.ts  feed.svelte.ts  handoff.svelte.ts  handoff.test.ts  runners.svelte.ts  sessionAttention.svelte.ts  sessionLabels.svelte.ts  sessionNaming.svelte.ts  sessions.svelte.ts  sessions.test.ts  sidePanel.svelte.ts  taskRuns.svelte.ts  toast.svelte.ts  usageResume.svelte.ts  usageResume.test.ts
src/panels/: ChangeFeed.svelte  ConfigPanel.svelte  DesignPanel.svelte  Onboarding.svelte  ProjectPicker.svelte  TasksPanel.svelte  Terminal.svelte  VcsPanel.svelte
src/panels/picker/: AgentChips.svelte  AgentsSection.svelte  DiscordSection.svelte  EditorsSection.svelte  OnLaunchSection.svelte  OpenInEditorButton.svelte  PathCombobox.svelte  QuickStartSection.svelte  RecentSection.svelte  RootsSection.svelte  RowMenu.svelte  chrome.css  lifecycle.svelte.ts
src/panels/vcs/: ChangesSection.svelte  CommitLog.svelte  RestoreSection.svelte  chrome.css
