[package]
name = "ade"
version = "0.0.1"
description = "ADE — Agentic Development Environment"
authors = ["Avi"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6"
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
