[package]
name = "ade"
version = "0.0.1"
description = "ADE — Agentic Development Environment"
authors = ["Avi"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6"
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Strict lints — the Rust equivalent of the frontend's oxlint/eslint layers.
# `cargo clippy -- -D warnings` (see the lint:rust script) turns these into
# errors in CI/local, matching oxlint's correctness=error posture.
[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allowances (mirrors ignoring a handful of noisy stylistic rules):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Tauri #[command] fns must take owned args (String) and State by value — the
# framework deserializes into them, so pass-by-value is required here.
needless_pass_by_value = "allow"
# Correctness we want as hard errors even without -D warnings:
unwrap_used = "deny"
expect_used = "allow"
